addition of cleaning and maintenance

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>OPTIMO</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
       
@@ -61,8 +61,8 @@
             <li><a class="nav-link scrollto" href="#about">About</a></li>
             <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
-                <li><a href="#">Cleaning</a></li>
-                <li><a href="#">Maintenance</a></li>
+                <li><a href="cleaning.html">Cleaning</a></li>
+                <li><a href="maintenance.html">Maintenance</a></li>
               </ul>
             </li>
             <li><a class="getstarted scrollto" href="#contact">Contact</a></li>
@@ -102,14 +102,10 @@
       
               <div class="clients-slider swiper swiper-initialized swiper-horizontal swiper-pointer-events">
                 <div class="swiper-wrapper align-items-center" id="swiper-wrapper-298a16a88ebf996e" aria-live="off" style="transform: translate3d(-2464px, 0px, 0px); transition-duration: 0ms;"><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="3 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="2"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="4 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="3"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="5 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="4"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="6 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="5"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="7 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="6"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-prev" role="group" aria-label="8 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="7"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide swiper-slide-duplicate-active" role="group" aria-label="1 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="0"><img src="assets/img/clients/clientshomecloud.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide swiper-slide-duplicate-next" role="group" aria-label="2 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="1"><img src="assets/img/clients/client-2.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="3 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="2"><img src="assets/img/clients/clientsg2c.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="4 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="3"><img src="assets/img/clients/clientsmj.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="5 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="4"><img src="assets/img/clients/clientshomecloud.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="6 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="5"><img src="assets/img/clients/clientsnj.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="7 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="6"><img src="assets/img/clients/clientsnewjan.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide swiper-slide-prev" role="group" aria-label="8 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="7"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
+                  <div class="swiper-slide swiper-slide-duplicate-active" role="group" aria-label="1 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="0"><img src="assets/img/clients/clientshomecloud.png" class="img-fluid" alt=""></div>
+                  <div class="swiper-slide" role="group" aria-label="2 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="1"><img src="assets/img/clients/clientsg2c.png" class="img-fluid" alt=""></div>
+                  <div class="swiper-slide" role="group" aria-label="3 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="2"><img src="assets/img/clients/clientsmj.png" class="img-fluid" alt=""></div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="3"><img src="assets/img/clients/clientsnewjan.png" class="img-fluid" alt=""></div>
                 <div class="swiper-slide swiper-slide-duplicate swiper-slide-active" role="group" aria-label="1 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="0"><img src="assets/img/clients/client-1.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate swiper-slide-next" role="group" aria-label="2 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="1"><img src="assets/img/clients/client-2.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="3 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="2"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="4 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="3"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="5 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="4"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="6 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="5"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div></div>
                 <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal"><span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 3"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 5"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 6"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 7"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 8"></span></div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
@@ -128,22 +124,25 @@
           <div class="row content">
             <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="150">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+              At Optimo our passion for cleaning and maintenance ensures that we provide a consistent customer-focused service.
               </p>
-              <ul>
-                <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-                <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-                <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              </ul>
+              <p>
+                We are an honest family run business that has been servicing Cardiff and the surrounding areas for many years. 
+                Over these years we have built trust by providing a consistent reliable cleaning experience.  This is why many of
+                 our clients continue to choose Optimo for their home or workplace. 
+              </p>
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
               <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum.
+                With more and more customers signing up for our cleaning and maintenance services every day, its clear recommendations 
+                have spread through friends and family of our existing customers, which we find to be the best testimony of our quality 
+                and reliability. 
               </p>
-              <a href="#" class="btn-learn-more">Learn More</a>
+              <p>
+                We offer personalised and customisable services ranging from one off domestic deep cleaning to regular maintenance of 
+                commercial properties. Our in house maintenance team offer a bespoke service that can take away the headache any issue 
+                including Electrical, Plumbing, Handyman, Windows & Doors, Painting, Carpentry & much more.
+              </p>
             </div>
           </div>
   
@@ -156,7 +155,7 @@
   
           <div class="row">
             <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-xl-start aos-init aos-animate" data-aos="fade-right" data-aos-delay="150">
-              <img src="assets/img/countsimage.jpg" alt="" class="img-fluid">
+              <img src="assets/img/optimocounts.jpg" alt="" class="img-fluid">
             </div>
   
             <div class="col-xl-7 d-flex align-items-stretch pt-4 pt-xl-0 aos-init aos-animate" data-aos="fade-left" data-aos-delay="300">
@@ -165,7 +164,7 @@
                   <div class="col-md-6 d-md-flex align-items-md-stretch">
                     <div class="count-box">
                       <i class="bi bi-emoji-smile"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="0" class="purecounter">65</span>
+                      <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="0" class="purecounter">84</span>
                       <p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p>
                     </div>
                   </div>
@@ -173,24 +172,24 @@
                   <div class="col-md-6 d-md-flex align-items-md-stretch">
                     <div class="count-box">
                       <i class="bi bi-journal-richtext"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="0" class="purecounter">85</span>
-                      <p><strong>Projects</strong> adipisci atque cum quia aspernatur totam laudantium et quia dere tan</p>
+                      <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="0" class="purecounter">171</span>
+                      <p><strong>Properties</strong> adipisci atque cum quia aspernatur totam laudantium et quia dere tan</p>
                     </div>
                   </div>
   
                   <div class="col-md-6 d-md-flex align-items-md-stretch">
                     <div class="count-box">
                       <i class="bi bi-clock"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="0" class="purecounter">18</span>
-                      <p><strong>Years of experience</strong> aut commodi quaerat modi aliquam nam ducimus aut voluptate non vel</p>
+                      <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="0" class="purecounter">25</span>
+                      <p><strong>Hard Workers</strong> aut commodi quaerat modi aliquam nam ducimus aut voluptate non vel</p>
                     </div>
                   </div>
   
                   <div class="col-md-6 d-md-flex align-items-md-stretch">
                     <div class="count-box">
                       <i class="bi bi-award"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="0" class="purecounter">15</span>
-                      <p><strong>Awards</strong> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
+                      <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="0" class="purecounter">5</span>
+                      <p><strong>Years of trading</strong> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
                     </div>
                   </div>
                 </div>
