extra clients cleaning and maintenance hero

--- a/cleaning.html
+++ b/cleaning.html
@@ -74,7 +74,7 @@
     </header><!-- End Header -->
   
     <!-- ======= Hero Section ======= -->
-    <div id="hero" class="home">
+    <div id="hero-cleaning" class="home">
 
       <div class="container">
         <div class="hero-content">
@@ -94,7 +94,7 @@
         <div class="container">
   
           <div class="section-title aos-init aos-animate" data-aos="fade-up">
-            <h2>About Us</h2>
+            <h2>Cleaning</h2>
           </div>
   
           <div class="row content">
