--- a/index.html
+++ b/index.html
@@ -103,9 +103,14 @@
               <div class="clients-slider swiper swiper-initialized swiper-horizontal swiper-pointer-events">
                 <div class="swiper-wrapper align-items-center" id="swiper-wrapper-298a16a88ebf996e" aria-live="off" style="transform: translate3d(-2464px, 0px, 0px); transition-duration: 0ms;"><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="3 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="2"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="4 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="3"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="5 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="4"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="6 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="5"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="7 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="6"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-prev" role="group" aria-label="8 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="7"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
                   <div class="swiper-slide swiper-slide-duplicate-active" role="group" aria-label="1 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="0"><img src="assets/img/clients/clientshomecloud.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="2 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="1"><img src="assets/img/clients/clientsg2c.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="3 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="2"><img src="assets/img/clients/clientsmj.png" class="img-fluid" alt=""></div>
-                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="3"><img src="assets/img/clients/clientsnewjan.png" class="img-fluid" alt=""></div>
+                  <div class="swiper-slide" role="group" aria-label="3 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="1"><img src="assets/img/clients/clientsmj.png" class="img-fluid" alt=""></div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="2"><img src="assets/img/clients/clientsnewjan.png" class="img-fluid" alt=""></div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="3"><img src="assets/img/clients/clients2let2.png" class="img-fluid" alt=""></div>
+                  <div class="swiper-slide" role="group" aria-label="2 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="4"><img src="assets/img/clients/clientsg2c.png" class="img-fluid" alt=""></div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="5"><img src="assets/img/clients/clientsjr.png" class="img-fluid" alt=""></div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="6"><img src="assets/img/clients/clientsldc.png" class="img-fluid" alt=""></div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="7"><img src="assets/img/clients/clientsss.png" class="img-fluid" alt=""></div>
+                  <div class="swiper-slide" role="group" aria-label="4 / 4" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="8"><img src="assets/img/clients/clientspurplebricks.png" class="img-fluid" alt=""></div>
                 <div class="swiper-slide swiper-slide-duplicate swiper-slide-active" role="group" aria-label="1 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="0"><img src="assets/img/clients/client-1.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate swiper-slide-next" role="group" aria-label="2 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="1"><img src="assets/img/clients/client-2.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="3 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="2"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="4 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="3"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="5 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="4"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div><div class="swiper-slide swiper-slide-duplicate" role="group" aria-label="6 / 8" style="width: 56px; margin-right: 120px;" data-swiper-slide-index="5"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div></div>
                 <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal"><span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 3"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 5"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 6"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 7"></span><span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 8"></span></div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
@@ -269,7 +274,7 @@
   
             <div class="col-lg-4 col-md-6">
               <div class="member aos-init aos-animate" data-aos="fade-up">
-                <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+                <div class="pic"><img src="assets/img/optimodirectors.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Cristina Grilo-Stoica & Florin Stoica</h4>
                   <span>Directors</span>
@@ -279,7 +284,7 @@
   
             <div class="col-lg-4 col-md-6">
               <div class="member aos-init aos-animate" data-aos="fade-up" data-aos-delay="150">
-                <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+                <div class="pic"><img src="assets/img/andreia.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Andreia Attard</h4>
                   <span>Office Manager</span>
@@ -289,7 +294,7 @@
   
             <div class="col-lg-4 col-md-6">
               <div class="member aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
-                <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+                <div class="pic"><img src="assets/img/optimocarina.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
                   <h4>Carina Jenkins</h4>
                   <span>Business Development Manager</span>
