content added cleaning and maintenance icons

--- a/maintenance.html
+++ b/maintenance.html
@@ -89,93 +89,88 @@
     <!-- End Hero -->
   
     <main id="main">
-        <!-- ======= About Section ======= -->
-      <section id="about" class="about">
-        <div class="container">
-  
-          <div class="section-title aos-init aos-animate" data-aos="fade-up">
-            <h2>MAINTENANCE</h2>
-          </div>
-  
-          <div class="row content">
-            <div class="col-lg-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="150">
-              <p>
-              At Optimo our passion for cleaning and maintenance ensures that we provide a consistent customer-focused service.
-              </p>
-              <p>
-                We are an honest family run business that has been servicing Cardiff and the surrounding areas for many years. 
-                Over these years we have built trust by providing a consistent reliable cleaning experience.  This is why many of
-                 our clients continue to choose Optimo for their home or workplace. 
-              </p>
-            </div>
-            <div class="col-lg-6 pt-4 pt-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
-              <p>
-                With more and more customers signing up for our cleaning and maintenance services every day, its clear recommendations 
-                have spread through friends and family of our existing customers, which we find to be the best testimony of our quality 
-                and reliability. 
-              </p>
-              <p>
-                We offer personalised and customisable services ranging from one off domestic deep cleaning to regular maintenance of 
-                commercial properties. Our in house maintenance team offer a bespoke service that can take away the headache any issue 
-                including Electrical, Plumbing, Handyman, Windows & Doors, Painting, Carpentry & much more.
-              </p>
-            </div>
-          </div>
-  
+         <!-- ======= About Us Section ======= -->
+    <section id="c-about" class="c-about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Maintenance</h2>
+          <p>We believe that efficiency in our cleaning methods will always ensure that we provide a timely, high end quality standard of finish to your home or workplace.</p>
         </div>
-      </section>
-      <!-- End of About -->
-      <!-- ======= Counts Section ======= -->
-      <section id="counts" class="counts">
-        <div class="container">
-  
-          <div class="row">
-            <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-xl-start aos-init aos-animate" data-aos="fade-right" data-aos-delay="150">
-              <img src="assets/img/optimocounts.jpg" alt="" class="img-fluid">
-            </div>
-  
-            <div class="col-xl-7 d-flex align-items-stretch pt-4 pt-xl-0 aos-init aos-animate" data-aos="fade-left" data-aos-delay="300">
-              <div class="content d-flex flex-column justify-content-center">
-                <div class="row">
-                  <div class="col-md-6 d-md-flex align-items-md-stretch">
-                    <div class="count-box">
-                      <i class="bi bi-emoji-smile"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="0" class="purecounter">84</span>
-                      <p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p>
-                    </div>
-                  </div>
-  
-                  <div class="col-md-6 d-md-flex align-items-md-stretch">
-                    <div class="count-box">
-                      <i class="bi bi-journal-richtext"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="0" class="purecounter">171</span>
-                      <p><strong>Properties</strong> adipisci atque cum quia aspernatur totam laudantium et quia dere tan</p>
-                    </div>
-                  </div>
-  
-                  <div class="col-md-6 d-md-flex align-items-md-stretch">
-                    <div class="count-box">
-                      <i class="bi bi-clock"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="0" class="purecounter">25</span>
-                      <p><strong>Hard Workers</strong> aut commodi quaerat modi aliquam nam ducimus aut voluptate non vel</p>
-                    </div>
-                  </div>
-  
-                  <div class="col-md-6 d-md-flex align-items-md-stretch">
-                    <div class="count-box">
-                      <i class="bi bi-award"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="0" class="purecounter">5</span>
-                      <p><strong>Years of trading</strong> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
-                    </div>
-                  </div>
-                </div>
-              </div><!-- End .content-->
+
+        <div class="row gy-4">
+          <div class="col-lg-6">
+            <h3>Voluptatem dignissimos provident quasi corporis</h3>
+            <img src="assets/img/teamphoto.JPG" class="img-fluid rounded-4 mb-4" alt="">
+            <p>
+              An emergency normally leads to panic, its human nature. Who do I call? The Optimo rapid response teams are on call 24 hours a day and we aim to respond to all reactive property maintenance calls within 4 hours, so you can be assured that professional help is close at hand.
+            </p>
+            <p>
+              Always on time, on budget and with all work completed by a competent and qualified tradesperson, all of whom take pride in their work. Get in touch with one of our friendly team today.
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <div class="content ps-0 ps-lg-5">
+              <p class="fst-italic">
+                Areas of Expertise:
+              </p>
+              <ul>
+                <li><i class="bi bi-check-circle-fill"></i> Planned Maintenance - Fencing, Redecoration, Repairs, New Kitchens, Gardening, </li>
+                <li><i class="bi bi-check-circle-fill"></i> Reactive Maintenance - Emergency Call Out Repairs, Drainage, Electrical, Plumbing, Carpentry, Roofing</li>
+                <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              </ul>
+              <p>
+                Our experienced team can assist with a large range of renovation and home improvement services. These include carpentry, painting, plumbing, electrical, plastering and masonry services. Optimo can renovate your bathroom, toilet, shower or garage and provide a handyman for those smaller jobs. For those times when the worst happens, we can quickly do insurance repairs and emergency make-safes.
+              </p>
+              <p>
+                Our team also includes specialists in the commercial field, all with the relevant licenses and insurances. We can help with everything from redecorating to insurance repairs and emergency make safes. Our scope of work is broad so please call us to find out how we can help you.
+              </p>
+              <div class="position-relative mt-4">
+                <img src="assets/img/optimocleaning.jpg" class="img-fluid rounded-4" alt="">
+                <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
+              </div>
             </div>
           </div>
-  
         </div>
-      </section>
-      <!-- End of Counts Section-->
+
+      </div>
+    </section>
+    <!-- End About Us Section -->
+    <!-- ======= About Lists Section ======= -->
+    <section class="about-lists">
+      <div class="container">
+
+        <div class="row no-gutters">
+
+          <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up">
+            <span>Tenants</span>
+            <h4>Moving out? Let us take the hassle away from making your old home look like new when you leave</h4>
+            <p>Our specially trained cleaners will perform an all-around cleaning so we can help you spend less on moving out and retain your deposit. We can do additional tasks upon request, so if you need anything specific just ask and we will be happy to help. End of tenancy cleaning services are tailored to take one of the biggest stresses out of moving out of a rented property. We clean the property like never before. Our cleaning services provide a deep clean and ensure that you’ll get as much of your deposit back as is in our control. We provide VAT invoices on request and can also pick up keys from local estate agents or another address nearby.</p>
+          </div>
+
+          <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up" data-aos-delay="100">
+            <span>Landlords</span>
+            <h4>Repellat Nihil</h4>
+            <p>Optimo can help you prepare your property for new tenants and make it look welcoming and nice for them. With our in house handyman services we can step in if the premises need a bit of repair before new people move in. Contact us to find out how we can assist you.</p>
+          </div>
+
+          <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up" data-aos-delay="200">
+            <span>Estate Agents</span>
+            <h4> Ad ad velit qui</h4>
+            <p>We work with well-known estate agents and property management agencies to handle cleaning of homes after tenants move out and before the new ones move in. Our partnerships allow agencies to offer the best of their properties to clients and present them in the best light possible.</p>
+          </div>
+
+          <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up" data-aos-delay="300">
+            <span>Holiday Let</span>
+            <h4>Why don't you </h4>
+            <p>stand out from the crowd with our excellent / pristine cleaning service. Getting your holiday let ready for each new guest can be overwhelming and stressful. Our Optimo team will provide a high-quality reliable service that will take away that feeling, helping you to provide a comfortable, clean environment for your guests whether in the short or long term.</p>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+    <!-- End About Lists Section -->
             <!-- ======= Features Section ======= -->
             <section id="features" class="features">
                 <div class="container">
@@ -188,56 +183,56 @@
                   <div class="row aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
                     <div class="col-lg-3 col-md-4">
                       <div class="icon-box">
-                        <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                        <h3><a href="">Lorem Ipsum</a></h3>
+                        <i class="fa-solid fa-brush" style="color: #ffbb2c;"></i>
+                        <h3><a href="">Painting / Decorating</a></h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                       <div class="icon-box">
-                        <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-                        <h3><a href="">Dolor Sitema</a></h3>
+                        <i class="fa-solid fa-screwdriver-wrench" style="color: #5578ff;"></i>
+                        <h3><a href="">Handyman Repairs</a></h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                       <div class="icon-box">
-                        <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                        <h3><a href="">Sed perspiciatis</a></h3>
+                        <i class="fa-solid fa-screwdriver" style="color: #e80368;"></i>
+                        <h3><a href="">Carpentry</a></h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
                       <div class="icon-box">
-                        <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
-                        <h3><a href="">Magni Dolores</a></h3>
+                        <i class="fa-solid fa-wrench" style="color: #e361ff;"></i>
+                        <h3><a href="">Kitchen Fitting</a></h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
-                        <i class="ri-database-2-line" style="color: #47aeff;"></i>
-                        <h3><a href="">Nemo Enim</a></h3>
+                        <i class="fa-solid fa-faucet-drip" style="color: #47aeff;"></i>
+                        <h3><a href="">Plumbing</a></h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
-                        <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
-                        <h3><a href="">Eiusmod Tempor</a></h3>
+                        <i class="fa-solid fa-house-chimney-window" style="color: #ffa76e;"></i>
+                        <h3><a href="">Windows / Cleaning</a></h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
-                        <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
-                        <h3><a href="">Midela Teren</a></h3>
+                        <i class="fa-solid fa-seedling" style="color: #11dbcf;"></i>
+                        <h3><a href="">Gardening</a></h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
-                        <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
-                        <h3><a href="">Pira Neve</a></h3>
+                        <i class="fa-solid fa-plug" style="color: #4233ff;"></i>
+                        <h3><a href="">Electrical </a></h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
-                        <i class="ri-anchor-line" style="color: #b2904f;"></i>
-                        <h3><a href="">Dirada Pack</a></h3>
+                        <i class="fa-solid fa-hammer" style="color: #b2904f;"></i>
+                        <h3><a href="">Flooring </a></h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
