--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           <i class="fa-solid fa-mobile-button phone-icon"></i> 02921324815
         </div>
         <div class="social-links d-none d-md-block">
-          <a href="https://www.facebook.com/profile.php?id=100088619212533" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="https://instagram.com/optimoltd" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100088619212533" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://instagram.com/optimoltd" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </section>
@@ -97,7 +97,7 @@
       
               <div class="section-title">
                 <h2>Our Clients</h2>
-                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                <p>We pride ourselves on having long-standing customer relationships due to our strong knowledge, transparent process and passionate team.<br>See below some of the great companies that we have the pleasure of working with.</p>
               </div>
       
               <div class="clients-slider swiper swiper-initialized swiper-horizontal swiper-pointer-events">
@@ -170,7 +170,7 @@
                     <div class="count-box">
                       <i class="bi bi-emoji-smile"></i>
                       <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="0" class="purecounter">84</span>
-                      <p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p>
+                      <p><strong>Happy Clients</strong> across Cardiff and South Wales</p>
                     </div>
                   </div>
   
@@ -178,7 +178,7 @@
                     <div class="count-box">
                       <i class="bi bi-journal-richtext"></i>
                       <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="0" class="purecounter">171</span>
-                      <p><strong>Properties</strong> adipisci atque cum quia aspernatur totam laudantium et quia dere tan</p>
+                      <p><strong>Properties</strong> regularly cleaned and maintained</p>
                     </div>
                   </div>
   
@@ -186,7 +186,7 @@
                     <div class="count-box">
                       <i class="bi bi-clock"></i>
                       <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="0" class="purecounter">25</span>
-                      <p><strong>Hard Workers</strong> aut commodi quaerat modi aliquam nam ducimus aut voluptate non vel</p>
+                      <p><strong>Hard Workers</strong> fully trained and DBS checked</p>
                     </div>
                   </div>
   
@@ -194,7 +194,7 @@
                     <div class="count-box">
                       <i class="bi bi-award"></i>
                       <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="0" class="purecounter">5</span>
-                      <p><strong>Years of trading</strong> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
+                      <p><strong>Years of trading</strong> and building up an established and reputable company</p>
                     </div>
                   </div>
                 </div>
@@ -211,7 +211,7 @@
   
           <div class="section-title">
             <h2>Services</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <p>Our years of experience in the property industry have allowed us to offer a variety of services.<br> Please select whether you would like to enquire about our cleaning or maintenance department.</p>
           </div>
   
           <div class="row">
@@ -224,7 +224,7 @@
                   <i class="fa-solid fa-hand-sparkles"></i>
                 </div>
                 <h4><a href="">Cleaning</a></h4>
-                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                <p>Our flexible and reliable operation makes us the go-to company when it comes to cleaning. Click below to see our full range of cleaning services available</p>
               </div>
             </div>
   
@@ -237,7 +237,7 @@
                   <i class="fa-solid fa-screwdriver-wrench"></i>
                 </div>
                 <h4><a href="">Maintenance</a></h4>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                <p>We have recently extended our maintenance department and now cover a wide range of maintenance services for all your property needs</p>
               </div>
             </div>
           </div>
@@ -252,9 +252,9 @@
         <div class="container aos-init aos-animate" data-aos="zoom-in">
   
           <div class="text-center">
-            <h3>Call To Action</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a class="cta-btn" href="#">Call To Action</a>
+            <h3>Get In Touch</h3>
+            <p> Our team are eagerly awaiting your enquiry. We look forward to hearing from you.</p>
+            <a class="cta-btn" href="#">Contact Us</a>
           </div>
   
         </div>
@@ -266,8 +266,8 @@
         <div class="container">
   
           <div class="section-title aos-init aos-animate" data-aos="fade-in" data-aos-delay="100">
-            <h2>Team</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <h2>We are Optimo!</h2>
+            <p>The Optimo team, a highly recommended, family run and value-driven business.</p>
           </div>
   
           <div class="row">
@@ -314,7 +314,7 @@
   
           <div class="section-title">
             <h2>Contact</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <p>Office hours are Monday to Friday, 9am-5pm. All enquiries will be responded to within 24 hours.</p>
           </div>
   
           <div class="row">
@@ -336,7 +336,7 @@
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>07726244510</p>
+                  <p>02921324815</p>
                 </div>
   
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1494.2553502066678!2d-3.1786634845787125!3d51.49081365488551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486e1cbdcef262b5%3A0xfca8fdb3a2b15fe3!2s95%20Wyeverne%20Rd%2C%20Cardiff%20CF24%204BG!5e0!3m2!1sen!2suk!4v1677536837783!5m2!1sen!2suk" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen=""></iframe>
@@ -386,9 +386,9 @@
         <h3>OPTIMO</h3>
         <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
         <div class="social-links">
-          <a href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100088619212533" target="_blank" class="facebook"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://instagram.com/optimoltd" target="_blank" class="instagram"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <div class="copyright">
           © Copyright <strong><span>OPTIMO</span></strong>. All Rights Reserved
