cta updates maintenance services

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
   
           <div class="text-center">
             <h3>Get In Touch</h3>
-            <p> Our team are eagerly awaiting your enquiry. We look forward to hearing from you.</p>
+            <p> Life is busy, so let us take care of the cleaning and maintenance for you. Call us now to schedule your appointment and experience the difference of our professional services.</p>
             <a class="cta-btn" href="#">Contact Us</a>
           </div>
   
@@ -384,7 +384,7 @@
     <footer id="footer">
       <div class="container">
         <h3>OPTIMO</h3>
-        <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+        <p>Cleaning and maintenance made easy!</p>
         <div class="social-links">
           <a href="https://www.facebook.com/profile.php?id=100088619212533" target="_blank" class="facebook"><i class="fa-brands fa-facebook"></i></a>
           <a href="https://instagram.com/optimoltd" target="_blank" class="instagram"><i class="fa-brands fa-instagram"></i></a>
