--- a/cleaning.html
+++ b/cleaning.html
@@ -262,7 +262,7 @@
   
           <div class="text-center">
             <h3>Call To Action</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Ready to experience a spotless and well-maintained space? Contact us now and let our team get to work!</p>
             <a class="cta-btn" href="#">Call To Action</a>
           </div>
   
@@ -370,7 +370,7 @@
     <footer id="footer">
         <div class="container">
           <h3>OPTIMO</h3>
-          <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+          <p>Cleaning and maintenance made easy!</p>
           <div class="social-links">
             <a href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
             <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
