--- a/maintenance.html
+++ b/maintenance.html
@@ -126,7 +126,7 @@
                 Our team also includes specialists in the commercial field, all with the relevant licenses and insurances. We can help with everything from redecorating to insurance repairs and emergency make safes. Our scope of work is broad so please call us to find out how we can help you.
               </p>
               <div class="position-relative mt-4">
-                <img src="assets/img/optimocleaning.jpg" class="img-fluid rounded-4" alt="">
+                <img src="assets/img/optimoteam2.JPG" class="img-fluid rounded-4" alt="">
                 <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
               </div>
             </div>
@@ -176,7 +176,7 @@
                 <div class="container">
           
                   <div class="section-title aos-init aos-animate" data-aos="fade-up">
-                    <h2>Features</h2>
+                    <h2>Services</h2>
                     <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p>
                   </div>
           
@@ -214,12 +214,12 @@
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
                         <i class="fa-solid fa-house-chimney-window" style="color: #ffa76e;"></i>
-                        <h3><a href="">Windows / Cleaning</a></h3>
+                        <h3><a href="">Window Cleaning</a></h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
-                        <i class="fa-solid fa-seedling" style="color: #11dbcf;"></i>
+                        <i class="fa-brands fa-pagelines" style="color: #11dbcf;"></i>
                         <h3><a href="">Gardening</a></h3>
                       </div>
                     </div>
@@ -237,20 +237,20 @@
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
-                        <i class="ri-disc-line" style="color: #b20969;"></i>
-                        <h3><a href="">Moton Ideal</a></h3>
+                        <i class="fa-solid fa-house" style="color: #b20969;"></i>
+                        <h3><a href="">Property Turnover</a></h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
-                        <i class="ri-base-station-line" style="color: #ff5828;"></i>
-                        <h3><a href="">Verdo Park</a></h3>
+                        <i class="fa-solid fa-trash-can" style="color: #ff5828;"></i>
+                        <h3><a href="">Waste Removal</a></h3>
                       </div>
                     </div>
                     <div class="col-lg-3 col-md-4 mt-4">
                       <div class="icon-box">
-                        <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
-                        <h3><a href="">Flavor Nivelanda</a></h3>
+                        <i class="fa-solid fa-seedling" style="color: #29cc61;"></i>
+                        <h3><a href="">Lawn Care</a></h3>
                       </div>
                     </div>
                   </div>
@@ -263,7 +263,7 @@
   
           <div class="text-center">
             <h3>Call To Action</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Your satisfaction is our top priority. Get in touch with us now to learn more about our cleaning and maintenance solutions and how we can help you.</p>
             <a class="cta-btn" href="#">Call To Action</a>
           </div>
   
@@ -371,7 +371,7 @@
     <footer id="footer">
         <div class="container">
           <h3>OPTIMO</h3>
-          <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+          <p>Cleaning and maintenance made easy!</p>
           <div class="social-links">
             <a href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
             <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
